--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="bottom-text">
-                    The second part of my dissertation exploits the electoral reforms of 2003, which effectively split districts into two types. The first maintained an SNTV system while the second was comrpised of
+                    The second part of my dissertation explores the electoral reforms of 2003, which effectively split districts into two types. The first maintained an SNTV system while the second was comrpised of
                     single-member districts. While this system failed to address the demands by activists and opposition figures to introduce a system based on proportional representation, there has been little written about whether
                     this switch between SNTV and SMD designs affected the power of local elites. I examine the role this change had in altering existing power dynamics between tribes, with a focus on whether the reform allowed members of powerful tribes 
                     to consolidate their power at the expense of smaller tribes. In doing so, I engage with literature on patronage, identity-based voting, and electoral design.
