fixed footer and added projects section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
             </div>
         </div>
 
+        <div class="section">
+            <h1>Current Projects</h1>
+            <h3><em>(select a project to learn more)</em></h3>
+            <div class="projname">
+                <h2><a href="projects.html#water" class="projlink">Tribal Dynamics, Wasta, and Resource Management in Jordan</a></h2>
+            <div class="projname">
+                <h2><a href="projects.html#reforms" class="projlink">Jordanian Electoral Reforms and Identity-Based Voting</a></h2>
+            </div>
+        </div>
+
 
         <div id="footer-placeholder"></div>
         <script>
