--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
         </script>
 
         <div class="section">
-            <div class="projname">
+            <div class="projname" id="water">
                 <h2>Tribal Dynamics, Wasta, and Resource Management in Jordan</h2>
                 <div class="txt-cont">
                     <p>Jordan represents one of the most water-deficient countries in the world. 
@@ -60,7 +60,7 @@
         </div>
 
         <div class="section">
-            <div class="projname">
+            <div class="projname" id="reforms">
                 <h2>Electoral Reforms and Identity-Based Voting</h2>
                 <div class="txt-cont">
                     <div class="imagecap">
