edited header and footer

--- a/footer.html
+++ b/footer.html
@@ -1,13 +1,15 @@
 <footer class = 'footer' id = 'contact'>
-    <div class = 'contact-info'>
-        <p>Contact Me:</p>
-        <div class = 'socials'>
-            <a href="mailto:shedeed.1@osu.edu">
-                <img src = 'email-button.jpeg'>
-            </a>
-            <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.png'></a>
-            <a href = 'https://www.linkedin.com/in/mohamed-shedeed-590b07131/' target = "_blank"><img src = 'linkedin-logo.png'></a>
-            <a href = 'https://github.com/shedeemo'><img src = 'github-logo.jpeg' target = "_blank"></a>
+    <div class="footer__content">
+        <div class = 'contact-info'>
+            <p>Contact Me:</p>
+            <div class = 'socials'>
+                <a href="mailto:shedeed.1@osu.edu">
+                    <img src = 'email-button.jpeg'>
+                </a>
+                <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.png'></a>
+                <a href = 'https://www.linkedin.com/in/mohamed-shedeed-590b07131/' target = "_blank"><img src = 'linkedin-logo.png'></a>
+                <a href = 'https://github.com/shedeemo'><img src = 'github-logo.jpeg' target = "_blank"></a>
+            </div>
         </div>
     </div>
 </footer>
