--- a/header.html
+++ b/header.html
@@ -1,5 +1,8 @@
 <header class="header">
     <div class="header__content">
+        <div class="nav__logo">
+            <img src="headshot2.png" class="logo__img">
+        </div>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
@@ -18,11 +21,12 @@
                     <a href="cv_page.html" class="nav__link">CV</a>
                 </li>
                 <li class="nav__item">
-                    <a href="rtutorials.html" class="nav__link">R Tutorials</a>
+                    <a href="tutorials.html" class="nav__link">R Tutorials</a>
                 </li>
                 <li class="nav__item">
                     <a href="#contact" class="nav__link">Contact</a>
                 </li>
             </ul>
+        </nav>
     </div>
 </header>
