changing page title

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Prompt:wght@400;600&display=swap" rel="stylesheet">
         <script src = 'design.js'></script>
         <meta charset="UTF-8">
-	    <title>Home - Mohamed Shedeed</title>
+	    <title>Projects</title>
 	    <meta name="Welcome to my website!" content="width=device-width, initial-scale=1">
         <meta http-equiv="mohamed shedeed" content="mohamed shedeed, phd, ohio state">
         <meta name="keywords" content="research, cv, data science, academic">
