added viz tutorial

--- a/tutorials.html
+++ b/tutorials.html
@@ -55,7 +55,19 @@
                 </div>
                 <div class="tut__links">
                     <a href="exploration.html" target="_blank">Tutorial Webpage</a>
-                    <a href="https://github.com/shedeemo/rtutorials/blob/main/R%20Scripts/exploration.Rmd">Link to code</a> 
+                    <a href="https://github.com/shedeemo/rtutorials/blob/main/R%20Scripts/exploration.Rmd" target="_blank">Link to code</a> 
+                </div>
+            </div>
+            <div class="tutorial">
+                <div class="tut__title">
+                    <h2>Visualizations in R using <code>ggplot2</code></h2>
+                </div>
+                <div class="tut__descr">
+                    <p>This tutorial covers basic data exploration in R, as well as essential features of the <code>tidy</code> environment.</p>
+                </div>
+                <div class="tut__links">
+                    <a href="Visualization.html" target="_blank">Tutorial Webpage</a>
+                    <a href="https://github.com/shedeemo/rtutorials/blob/main/R%20Scripts/Visualization.Rmd" target="_blank">Link to code</a> 
                 </div>
             </div>
         </div>
