formatting subtitle on home page

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
                 <img class="image" src = 'headshot.jpeg', border = '10'>
             </div>
             <div class="basicinfo2">
-                <h1>Mohamed Shedeed</h1>
-                <p>PhD Candidate</p> 
-                <p>Political Science</p>
-                <p>Comparative Politics/ Research Methodology</p>
-                <p>The Ohio State University</p>
+                <div class="subtitles">
+                    <h1>Mohamed Shedeed</h1>
+                    <p>PhD Candidate</p> 
+                    <p>Political Science</p>
+                    <p>Comparative Politics/ Research Methodology</p>
+                    <p>The Ohio State University</p>
+                </div>
                 <div class = 'socials'>
                     <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.png'></a>
                     <a href = 'https://www.linkedin.com/in/mohamed-shedeed-590b07131/' target = "_blank"><img src = 'linkedin-logo.png'></a>
