added stuff to tuts page

--- a/tutorials.html
+++ b/tutorials.html
@@ -41,7 +41,7 @@
             <h1>R Tutorials</h1>
             <div class="txt-cont">
                 <p>You can find some of my R Tutorials below. You can either view the full tutorial below as an HTML document or use the link provided to access the R code through my github repository.
-                You can also go straight to the tutorial repository using <a href="https://github.com/shedeemo/rtutorials" target="_blank">this link</a>.</p>
+                You can also go straight to the tutorial repository using <a href="https://github.com/shedeemo/rtutorials" target="_blank">this link</a>. I'm currently working on uploading some additional tutorials, so stay tunes for additional guides on regression, plotting, mapping, and more.</p>
             </div>
         </div>
 
