saved from disaster

--- a/index_old.html
+++ b/index_old.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <!-- every part of the webpage is contained in head or body below -->
@@ -37,6 +36,66 @@
             });
         </script>
         <div>
+            <nav>
+                <ul>
+                    <li><a href = '#aboutme'>About Me</a></li>
+                    <li><a href = '#projects'>Current Projects</a></li>
+                    <li><a href = '#teaching'>Teaching</a></li>
+                    <li><a href = './cv_page.html'>CV</a></li>
+                    <li><a href = '#rtutorials'>R Tutorials</a></li>
+                    <li><a href = '#contact'>Contact</a></li>
+                 </ul>
+            </nav>
+        </div>
+        <div class = 'pagehead'>
+            <div class="imageclass2">
+                <img class="image" src = 'headshot.jpeg', border = '10'>
+            </div>
+            <div class="basicinfo2">
+                <h1>Mohamed Shedeed</h1>
+                <p>PhD Candidate</p> 
+                <p>Political Science</p>
+                <p>Comparative Politics/ Research Methodology</p>
+                <p>The Ohio State University</p>
+            </div>
+            <!-- <div class = 'subtitle'>
+                <h3>Political Science</h3>
+            </div> -->
+        </div>
+        <div class = 'socials'>
+            <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.png'></a>
+            <a href = 'https://www.linkedin.com/in/mohamed-shedeed-590b07131/' target = "_blank"><img src = 'linkedin-logo.png'></a>
+            <a href = 'https://github.com/shedeemo'><img src = 'github-logo.jpeg' target = "_blank"></a>
+        </div>
+
+        <div id = 'aboutme' class='section'>
+            <h1>About me</h1>
+            <div class = 'txt-cont'>
+                <p class = 'text'>Hello! My name is Mohamed and I'm a Political Science PhD candidate at The Ohio State University and Research Fellow with the Mershon Center for International Security. I am proudly from Jersey City, NJ (<em>home to the Statue of Liberty btw</em>) but moved to Ohio for graduate school. As an undergraduate, I attended Seton Hall University, where I received my degree in International Relations and Economics and worked as a research assistant for the Center for Peace and Conflict Studies. </p>
+                <img src = 'dana2.jpg' class="image2">
+            </div>
+            <p class = 'bottom-text'>My substantive asks how demographic factors interact with corruption and clientelism to result in unequal experiences of climate change for citizens of different social groups. I do this by studying the impact of the distribution of Jordan's tribes on both the enforcement of water sector reforms and the reliability of water delivery. My research ties together previous work on corruption, goods provision, and clientelism to understand how social and political factors influence how different populations experience the effects of climate change. Methodologically, I am interested in strategies of causal inference and the application of machine learning methods to political science as a means of data collection. As part of my dissertation, I am currently working on a more efficient means of estimating demographic distributions when accurate data is not publically available or easily accessible.</p>
+        </div>
+
+        <!-- <div>
+            <object data="MS_CV_5_23.pdf" width="1000" height="1000" type='application/pdf'></object>
+        </div> -->
+
+
+        <div class="section" id="teaching">
+            <h1>Teaching</h1>
+            <div class="course">
+                <div class="courseinfo">
+                    <div class="coursename">
+                        <h2>POLISC 7552: Generalized Linear Models</h2>
+                    </div>
+                    <div class="coursesem">
+                        Spring 2023
+                    </div>
+                    <div class="coursesem">
+                        <p>Teaching Assistant</p> 
+                        <p>for Skyler Cranmer</p>
+                    </div>
             <div class = 'pagehead'>
                 <div class="imageclass2">
                     <img class="image" src = 'headshot.jpeg', border = '10'>
