--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1>About me</h1>
                 <div class = 'txt-cont'>
                     <p class = 'text'>Hello! My name is Mohamed and I'm a Political Science PhD candidate at The Ohio State University and Research Fellow with the Mershon Center for International Security. I am proudly from Jersey City, NJ (<em>home to the Statue of Liberty btw</em>) and am currently based in Ohio for graduate school. As an undergraduate, I attended Seton Hall University, where I received my degree in International Relations and Economics and worked as a research assistant for the Center for Peace and Conflict Studies. </p>
-                    <img src = 'dana2.jpeg' class="image2">
+                    <img src = 'dana2.jpg' class="image2">
                 </div>
                 <p class = 'bottom-text'>My substantive asks how demographic factors interact with corruption and clientelism to result in unequal experiences of climate change for citizens of different social groups. I do this by studying the impact of the distribution of Jordan's tribes on both the enforcement of water sector reforms and the reliability of water delivery. My research ties together previous work on corruption, goods provision, and clientelism to understand how social and political factors influence how different populations experience the effects of climate change. Methodologically, I am interested in strategies of causal inference and the application of machine learning methods to political science as a means of data collection. As part of my dissertation, I am currently working on a more efficient means of estimating demographic distributions when accurate data is not publically available or easily accessible.</p>
             </div>
