--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
                 <div class="course">
                     <div class="courseinfo">
                         <div class="coursename">
+                            <h2>POLISC 4940: Politics of Immigration</h2>
+                        </div>
+                        <div class="coursesem">
+                            Autumn 2023
+                        </div>
+                        <div class="coursesem">
+                            <p>Instructor of Record</p>
+                        </div>
+                    </div>
+                    <div class="coursedescr">
+                        <p>
+                            This course provides students with an overview of the literature on voluntary and involuntary migration throughout the world. Students will be exposed to a variety of topics, including public attitudes toward migration, migrant experiences in host countries, and reasons for migration. The course is broken into two main parts. Part I discusses migration in the “Global North” and addresses concepts related to these migration patterns. Part II includes readings on migration in the “Global South.” In both parts, the goal is to help students develop an understanding of migration patterns, how host communities react to incoming refugees and migrants, and how the origins of migrants can affect these experiences. You can find the syllabus for this course <a href="syl_4940.html">here.</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="courseinfo">
+                        <div class="coursename">
                             <h2>POLISC 7552: Generalized Linear Models</h2>
                         </div>
                         <div class="coursesem">
@@ -102,7 +120,7 @@
                             <h2>POLISC 7551: Introduction to Probability Theory</h2>
                         </div>
                         <div class="coursesem">
-                            Fall 2022
+                            Autumn 2022
                         </div>
                         <div class="coursesem">
                             <p>Teaching Assistant</p> 
@@ -120,7 +138,7 @@
                             <h2>POLISC 3220: Politics of the Developing World</h2>
                         </div>
                         <div class="coursesem">
-                            Fall 2021
+                            Autumn 2021
                         </div>
                         <div class="coursesem">
                             <p>Teaching Assistant</p>
