made changes to project page and index section wid

--- a/projects.html
+++ b/projects.html
@@ -40,20 +40,13 @@
 
         <div class="section">
             <div class="projname" id="water">
-                <h2>Tribal Dynamics, Wasta, and Resource Management in Jordan</h2>
+                <h2>Decentralization, Water Management, and Corruption in Jordan</h2>
                 <div class="txt-cont">
-                    <p>Jordan represents one of the most water-deficient countries in the world. 
-                        While we can attribute the country's dwindling water supply to factors such as climate change, 
-                        pollution, and population booms, the human factor of this process is largely ignored. This shapes a discourse focused around strategies of adaptation to inevitable developments of climate change and precludes any state responsibility for these disasters. Though many of these factors, such as aridification, are undoubtedly a concern, we cannot ignore the role that state actors can play in worsening these crises. Rather than brainstorming adaptation strategies, a systematic investigation into the determinants of who distributes these resources and 
-                        to whom they distribute them is necessary in ensuring that the most vulnerable communities with the least political influence to not bear a disproportionate burden. As the climate crisis worsens, research on differential effects of deteriorating environemntal conditions due to social processes will become essential in improving govenrance strategies worldwide.</p>
+                    <p>As changes in climate intensify the challenges of water scarcity throughout the world, researchers must begin to examine the role that resource management strategies play in determining communities' access to water. In the early 2000s, Jordan established a number of Water User Associations (WUAs) in the Jordan Valley intending to provide farmers with more decision-making power over how water was distributed throughout their community. Each of these bodies is comprised of community representatives and holds authority over the distribution of water and the enforcement of anti-water theft regulations for all branches sprouting out of a designated water pumping station. This is in contrast to areas without WUAs, where the Jordan Valley Authority controls distribution and regulation enforcement at all levels.</p>
                         <img src="tribes-funds.png" alt="" class="image3">
                 </div>
                 <div class="bottom-text">
-                    <p>The first part of my dissertation examines the relationship between local demographic distirbutions, patronage, and resource management in Jordan. 
-                        I ask how the demographic composition of an electoral district influences its accessibility to critical resources such as water. 
-                        Additionally, the project investigates the role of tribal elites and the "shadow state" in the management of Jordan's resources, including 
-                        allocation and distribution systems alongside the implementation and enforcement of environmental reforms and regulations. This project engages with 
-                        political science literature studying the relationship between social group heterogeneity and public service delivery as well as previous work on patronage and corruption.
+                    <p>WUAs represent a case of administrative decentralization wherein the central government created local bodies to which it devolved certain obligations. As previous literature has found inconclusive results about the effects of such decentralization measures, I ask what explains variation in the success of these institutions by answering two key questions. First, I ask whether these institutions had any effect at all. I do this by examining a variety of crop growth metrics at various points along each canal branch to determine when water is diverted or rerouted. Second, I pull from canonical literature on diversity and public goods provision to explain why would observe more effective decentralization processes in some areas but not in others. Because tribal linkages can often facilitate patronage or clientelist relations, I use a novel dataset of tribal affiliations at the local level.
                     </p>
                 </div>
             </div>
