--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <h1>Current Projects</h1>
                 <h3><em>(select a project to learn more)</em></h3>
                 <div class="projname">
-                    <h2><a href="projects.html#water" class="projlink">Tribal Dynamics, Wasta, and Resource Management in Jordan</a></h2>
+                    <h2><a href="projects.html#water" class="projlink">Decentralization, Water Management, and Corruption in Jordan</a></h2>
                 <div class="projname">
                     <h2><a href="projects.html#reforms" class="projlink">Jordanian Electoral Reforms and Identity-Based Voting</a></h2>
                 </div>
@@ -177,6 +177,6 @@
 </html>
 
 
-<p>
+<!-- <p>
 
-</p>
+</p> -->
