--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div id = 'aboutme' class='section'>
                 <h1>About me</h1>
                 <div class = 'txt-cont'>
-                    <p class = 'text'>Hello! My name is Mohamed and I'm a Political Science PhD candidate at The Ohio State University and Research Fellow with the Mershon Center for International Security. I am proudly from Jersey City, NJ (<em>home to the Statue of Liberty btw</em>) and am currently based in Ohio for graduate school. As an undergraduate, I attended Seton Hall University, where I received my degree in International Relations and Economics and worked as a research assistant for the Center for Peace and Conflict Studies. During my free tiem I like to explore the food scene wherever I am, find some cool hikes to go on, and drive across the country to see King Gizzard & the Lizard Wizard.</p>
+                    <p class = 'text'>Hello! My name is Mohamed and I'm a Political Science PhD candidate at The Ohio State University and Research Fellow with the Mershon Center for International Security. I am proudly from Jersey City, NJ (<em>home to the Statue of Liberty btw</em>) and am currently based in Ohio for graduate school. As an undergraduate, I attended Seton Hall University, where I received my degree in International Relations and Economics and worked as a research assistant for the Center for Peace and Conflict Studies. During my free time I like to explore the food scene wherever I am, find some cool hikes to go on, and drive across the country to see King Gizzard & the Lizard Wizard.</p>
                     <img src = 'dana2.jpg' class="image2">
                 </div>
                 <p class="bottom-test">
