--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <p class="bottom-test">
                     My dissertation research asks several questions about how power is created, maintained, and used in Jordan. To understand how power is produced in Jordan, I examine the effects that both decentralization reforms and electoral reforms had on public goods outcomes and electoral results at the sub-national level. I bring literature discussing the effects of decentralization in conversation with previous research on determinants of public goods provision, with focus on when these factors inhibit or facilitate corruption. Methodologically, I am interested in strategies of causal inference and the application of machine learning methods to political science as a means of data collection. As part of my dissertation, I am currently working on a more efficient means of estimating demographic distributions when accurate data is not publically available or easily accessible.</p>
 
-                    <p>Below is a glimpse of my research on Jordanian tribal identity. using data from a Rabettah, an Arabic-language social media wesbite, I was able to map connections between various families, tribes, and tribe branches in Jordan using the visNetwork package in R. You can explore these connections by selecting specific families or by selecting all families within a specific governorate. <em>Note: The full visualization might take a second to load.</em> </p>
+                   <p>You can click <a href="tribe_nets.html">here</a> an interactive view of some of my research on tribal dynamics in Jordan.</p>
 
-                    <iframe src="tribe_networks.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+                    
             </div>
     
             <!-- <div>
