painstakingly changed formatting stuff

--- a/footer.html
+++ b/footer.html
@@ -6,10 +6,10 @@
                 <a href="mailto:shedeed.1@osu.edu">
                     <img src = 'email-button.jpeg'>
                 </a>
-                <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.png'></a>
+                <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.avif'></a>
                 <a href = 'https://www.linkedin.com/in/mohamed-shedeed-590b07131/' target = "_blank"><img src = 'linkedin-logo.png'></a>
-                <a href = 'https://github.com/shedeemo'><img src = 'github-logo.jpeg' target = "_blank"></a>
-            </div>
+                <a href = 'https://github.com/shedeemo'><img src = 'git-logo.webp' target = "_blank"></a>
+            </div> 
         </div>
     </div>
 </footer>
