--- a/header.html
+++ b/header.html
@@ -9,6 +9,9 @@
                     <a href="index.html" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
+                    <a href="tribe_nets.html" class="nav__link">Explore Jordanian Tribal Networks</a>
+                </li>
+                <li class="nav__item">
                     <a href="index.html#aboutme" class="nav__link">About Me</a>
                 </li>
                 <li class="nav__item">
