uploading network tutorial

--- a/tutorials.html
+++ b/tutorials.html
@@ -48,6 +48,18 @@
         <div class="section">
             <div class="tutorial">
                 <div class="tut__title">
+                    <h2>Interactive Network Visualization</h2>
+                </div>
+                <div class="tut__descr">
+                    <p>This tutorial shows how to use the visNetwork R package to create interactive network visualizations.
+                </div>
+                <div class="tut__links">
+                    <a href="tribe_nets_tutorial.html" target="_blank">Tutorial Webpage</a>
+                    <a href="https://github.com/shedeemo/rtutorials/blob/main/R%20Scripts/tribe_nets.Rmd" target="_blank">Link to code</a> 
+                </div>
+            </div>
+            <div class="tutorial">
+                <div class="tut__title">
                     <h2>Basic Data Exploration</h2>
                 </div>
                 <div class="tut__descr">
