--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <p>The Ohio State University</p>
                     </div>
                     <div class = 'socials'>
-                        <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.png'></a>
+                        <a href = 'https://twitter.com/mshedeed24' target = "_blank"><img src = 'twitter-logo.avif'></a>
                         <a href = 'https://www.linkedin.com/in/mohamed-shedeed-590b07131/' target = "_blank"><img src = 'linkedin-logo.png'></a>
-                        <a href = 'https://github.com/shedeemo'><img src = 'github-logo.jpeg' target = "_blank"></a>
+                        <a href = 'https://github.com/shedeemo'><img src = 'git-logo.webp' target = "_blank"></a>
                     </div>
                 </div>
                 <!-- <div class = 'subtitle'>
