--- a/cv_page.html
+++ b/cv_page.html
@@ -38,7 +38,7 @@
         </script>
 
         <div class="cv">
-            <object data="cv_MS_24.pdf" width="1000" height="1000" type='application/pdf'></object>
+            <object data="CV_MS_6_24.pdf" width="1000" height="1000" type='application/pdf'></object>
         </div>
 
         <div id="footer-placeholder"></div>
