--- a/tutorials.html
+++ b/tutorials.html
@@ -41,7 +41,7 @@
             <h1>R Tutorials</h1>
             <div class="txt-cont">
                 <p>You can find some of my R Tutorials below. You can either view the full tutorial below as an HTML document or use the link provided to access the R code through my github repository.
-                You can also go straight to the tutorial repository using <a href="https://github.com/shedeemo/rtutorials" target="_blank">this link</a>. I'm currently working on uploading some additional tutorials, so stay tunes for additional guides on regression, plotting, mapping, and more.</p>
+                You can also go straight to the tutorial repository using <a href="https://github.com/shedeemo/rtutorials" target="_blank">this link</a>. I'm currently working on uploading some more tutorials, so stay tuned for additional guides on regression, plotting, mapping, and more.</p>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
                     <h2>Interactive Network Visualization</h2>
                 </div>
                 <div class="tut__descr">
-                    <p>This tutorial shows how to use the visNetwork R package to create interactive network visualizations.
+                    <p>This tutorial shows how to use the <code>visNetwork</code> R package to create interactive network visualizations.
                 </div>
                 <div class="tut__links">
                     <a href="tribe_nets_tutorial.html" target="_blank">Tutorial Webpage</a>
