--- a/cv_page.html
+++ b/cv_page.html
@@ -38,7 +38,8 @@
         </script>
 
         <div class="cv">
-            <object data="CV_MS_6_24.pdf" width="1000" height="1000" type='application/pdf'></object>
+            <a href="CV_MS_24.pdf" target="_blank">Click here to view my CV</a>.</p>
+            <!-- <object data="CV_MS_24.pdf" width="100%" height="1200px" type="application/pdf"></object> -->
         </div>
 
         <div id="footer-placeholder"></div>
