--- a/tribe_nets.html
+++ b/tribe_nets.html
@@ -41,10 +41,31 @@
 
         <div class="section">
             <div class="bottom-test">
-                <p>Below is a glimpse of my research on Jordanian tribal identity. Using data from a Rabettah, an Arabic-language social media wesbite, I was able to map connections between various families, tribes, and tribe branches in Jordan using the visNetwork package in R. You can explore these connections by selecting specific families or by selecting all families within a specific governorate. <em>Note: The full visualization might take a second to load.</em> </p>
-    
-                <p>Using this graphic, you can explore connections between tribes either by zooming in on the network to examine a particular cluster, hovering over a node to find its closest links, selecting a particular family from the dropdown list, or selecting only the nodes within a particular governorate. Note that this data was obtained in December 2022, and therefore is limited in scope to the families that were active on Rabettah during that time period, rather than offering a complete picture of tribal linkages through the country.</p>
-                <iframe src="tribe_networks.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+                <h1>Exploring Jordanian Tribal Networks</h1>
+
+                <p>A significant part of my research entails reconstructing accurate and meaningful tribal networks. To do so, I use a variety of sources, such as Hinna Amari's <i>Dictionary of Clans in Jordan and Palestine</i>. Additionally, I rely on online sources such as the Arabic-language social media website Rabettah, in which users can provide information about their families' tribal genealogies, as well as official blogs or websites maintained by the countries' tribes and official documents provided to me by their <i>diwans</i>. However, these tribal connections are not in themselves politically or socially meaningful. As part of this project, we also used a Louvain community detection algorithm to identify sub-communities within each tribe. This was helpful in determining which sub-divisions <i>within</i> tribes we can expect to become mobilizing factors based on available demographic information.</p>
+
+                <p>Using the graphics below, you can explore connections between various families and tribes in Jordan either by zooming in to view specific nodes, hovering over nodes to find the closest links, zooming in to examine specific relationships, or selecting particular families from the dropdown list. At the moment, names are written only in Arabic. <i>Note: This is an ongoing project, so some connections are subject to change as the project progresses.</i></p>
+
+                <h2>Examining Networks Across Electoral Districts</h2>
+
+                <p>Below, you can see the tribal networks in Kerak, a southern governorate of Jordan. Kerak's tribal structure broadly contains a handful of tribal alliances (Gubser 1973), which can be viewed in the figure below. From this diagram, it is clear that the population of Kerak is largely interconnected, with most families belonging to a larger kinship network.</p>
+
+                <iframe src="tribe_networks/kerak_net.html" width="90%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+
+                <p>We can compare the network in Kerak to the one in Ajloun, pictured below. It is clear from these diagrams that in Ajloun, the kinship networks are significantly more disjointed, with families being isolated from one another. Though this indicates greater fragmentation between families, it should not be taken to mean that Ajloun is less "tribal" or <i>'ashairi</i> (Layne 2021). On the contrary, the networks presented for both Ajloun and Kerak represent roughly 70% of the population in each of these districts. However, it represents nearly three times as many names in Ajloun as it does in Kerak, indicating that Ajloun contains much larger families, whereas tribes and clans in Kerak feature greater levels of internal division.</p>
+
+                <iframe src="tribe_networks/ajloun_net.html" width="90%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+
+                <h2>Comparing Structures Across Tribes</h2>
+
+                <p>Next, we can look at one specific tribe in Mafraq named the Bani Hassan, one of Jordan's largest tribes. The network diagram displays an intricate view of the Bani Hassan, with its two many sections, Thabta and Hiayyil, breaking off into a variety of branches and sub-branches.</p>
+
+                <iframe src="tribe_networks/bh_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+
+                We can contrast this structure with that of the Sardiyya tribe, another large tribe in northern Jordan. There is a clear difference in structure, in which the Sardiyya tribe features a number of branches, but now lower levels of division such as those in Bani Hassan. This comparison shows the diversity of such family units in Jordan, even for those within the same region of the country. 
+
+                <iframe src="tribe_networks/sard_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
             </div>
         </div>
 
