putting up mafraq net

--- a/tribe_nets.html
+++ b/tribe_nets.html
@@ -66,6 +66,8 @@
                 We can contrast this structure with that of the Sardiyya tribe, another large tribe in northern Jordan. There is a clear difference in structure, in which the Sardiyya tribe features a number of branches, but now lower levels of division such as those in Bani Hassan. This comparison shows the diversity of such family units in Jordan, even for those within the same region of the country. 
 
                 <iframe src="tribe_networks/sard_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+
+                <iframe src="tribe_networks/mafraq_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
             </div>
         </div>
 
