changing tribe order

--- a/tribe_nets.html
+++ b/tribe_nets.html
@@ -53,6 +53,10 @@
 
                 <iframe src="tribe_networks/kerak_net.html" width="90%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
 
+                In the governorate of Mafraq, we similarly see large networks of families strung together by tribal ties. The large tribes of northern Jordan, such as the Bani Hassan, Sardiyya, and Sirhan, can easily be seen here, along with a number of isolated families that do not belong to these larger networks. 
+
+                <iframe src="tribe_networks/mafraq_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
+
                 <p>Now contrast this with the network structure in Ajloun, pictured below. In Ajloun, the kinship networks are significantly more disjointed, with families generally being isolated from one another. Though this indicates greater fragmentation between families, it should not be taken to mean that Ajloun is less "tribal" or <i>'ashairi</i> (Layne 2021). On the contrary, the networks presented for both Ajloun and Kerak represent roughly 70% of the population in each of these districts. However, nearly three times as many names from Kerak are represented compared to names from Ajloun. This indicates that Ajloun contains much larger families, whereas tribes and clans in Kerak feature greater levels of internal division.</p>
 
                 <iframe src="tribe_networks/ajloun_net.html" width="90%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
@@ -66,8 +70,6 @@
                 We can contrast this structure with that of the Sardiyya tribe, another large tribe in northern Jordan. There is a clear difference in structure, in which the Sardiyya tribe features a number of branches, but now lower levels of division such as those in Bani Hassan. This comparison shows the diversity of such family units in Jordan, even for those within the same region of the country. 
 
                 <iframe src="tribe_networks/sard_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
-
-                <iframe src="tribe_networks/mafraq_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
             </div>
         </div>
 
