updated formatting issue

--- a/tribe_nets.html
+++ b/tribe_nets.html
@@ -53,7 +53,7 @@
 
                 <iframe src="tribe_networks/kerak_net.html" width="90%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
 
-                In the governorate of Mafraq, we similarly see large networks of families strung together by tribal ties. The large tribes of northern Jordan, such as the Bani Hassan, Sardiyya, and Sirhan, can easily be seen here, along with a number of isolated families that do not belong to these larger networks. 
+                <p> In the governorate of Mafraq, we similarly see large networks of families strung together by tribal ties. The large tribes of northern Jordan, such as the Bani Hassan, Sardiyya, and Sirhan, can easily be seen here, along with a number of isolated families that do not belong to these larger networks.</p>
 
                 <iframe src="tribe_networks/mafraq_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
 
