--- a/cv_page.html
+++ b/cv_page.html
@@ -38,7 +38,7 @@
         </script>
 
         <div class="cv">
-            <a href="cv_MS_24.pdf" target="_blank">Click here to view my CV</a>.</p>
+            <a href="CV_MS_12_24.pdf" target="_blank">Click here to view my CV</a>.</p>
             <!-- <object data="CV_MS_24.pdf" width="100%" height="1200px" type="application/pdf"></object> -->
         </div>
 
